# Photonic

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  THIRD-PARTY-NOTICES.md  about.hbs  about.toml  deny.toml
.cargo/: config.toml
.claude/skills/feature-expansion/: SKILL.md
.claude/skills/photonic-design/: SKILL.md
.claude/skills/photonic-layers/: SKILL.md
.claude/skills/photonic-plan/: SKILL.md
.claude/skills/photonic-shapes/: SKILL.md
.claude/skills/photonic-workflow/: SKILL.md
.claude/workflows/: photonic-issue-fixer.js
.github/workflows/: ci.yml  release.yml
crates/photonic-app/: Cargo.toml  build.rs
crates/photonic-app/src/: args.rs  claude_client.rs  cli.rs  main.rs  mcp_proxy.rs  repl.rs  script.rs
crates/photonic-core/: Cargo.toml
crates/photonic-core/examples/: edit_demo.rs
crates/photonic-core/src/: annotation.rs  audit.rs  color.rs  diagnostics.rs  document.rs  export.rs  history.rs  import.rs  layer.rs  lib.rs  migration.rs  node.rs  path.rs  photon_file.rs  selection.rs  style.rs  transform.rs  units.rs
crates/photonic-core/src/ops/: boolean.rs  constraints.rs  join.rs  merge.rs  mod.rs  offset.rs  simplify.rs  stroke_outline.rs  transform_ops.rs
crates/photonic-core/src/raster/: adjust.rs  advanced.rs  blend.rs  brush.rs  filter.rs  geometry.rs  image.rs  mask.rs  mod.rs  repair.rs  warp.rs
crates/photonic-core/tests/: raster_editing_session.rs  raster_integration.rs
crates/photonic-embed/: Cargo.toml
crates/photonic-embed/src/: lib.rs
crates/photonic-embed/tests/: smoke.rs
crates/photonic-gui/: Cargo.toml
crates/photonic-gui/src/: app.rs  color_edit.rs  commands.rs  disk_search.rs  global_search.rs  hotbar.rs  lib.rs  lightfall.rs  preferences.rs  quit.rs  radial_wheel.rs  release_notes.rs  snap.rs  theme.rs  update.rs  viewport.rs  welcome.rs
crates/photonic-gui/src/app/: command_center.rs  demos.rs  direct_select.rs  erase_tools.rs  geometry.rs  hit_test.rs  layer_ops.rs  mod.rs  rulers.rs  tool_handlers.rs  width_tool.rs
crates/photonic-gui/src/panels/: mod.rs  navigator.rs
crates/photonic-gui/src/tools/: mod.rs
crates/photonic-gui/tests/: no_tofu_glyphs.rs
crates/photonic-mcp/: Cargo.toml
crates/photonic-mcp/src/: lib.rs  protocol.rs  server.rs
crates/photonic-mcp/src/handlers/: annotations.rs  audit.rs  canvas.rs  clipboard.rs  color_guide.rs  document.rs  layers.rs  mod.rs  nodes.rs  raster.rs  transforms.rs
crates/photonic-render/: Cargo.toml
crates/photonic-render/src/: canvas.rs  compositor.rs  headless.rs  lib.rs  pipeline.rs  renderer.rs  tessellator.rs  text_path.rs
docs/: Features.md  architecture.md  file-format.md  format-versions.md  illustrator-feature-gaps.md  mcp-api.md  p1-fix-plan.md  raster-editing.md
docs/proposals/: 145-render-parity-windowed-vs-headless-blend-space.md  153-undo-of-node-layer-deletion-noop.md  154-drawer-ui-redesign.md  161-direct-select-tool-icon-redesign.md  162-pen-tool-cursor-and-double-click-close.md  163-selection-hit-testing-fill-reliability.md  164-direct-select-whole-object-highlight-and-fill-drag.md  165-corner-rounding-multiselect-and-cap.md  166-simplify-path-live-preview.md  168-rail-drawer-flush-gap.md  17-render-the-15-advanced-blend-modes-curre.md  171-recent-colors-commit-on-release.md  172-persistent-active-color-indicator.md  173-live-edit-history-and-remove-redundant-changelog.md  179-corner-rounding-half-edge-clamp-tessellator-and-mcp.md  18-general-purpose-live-effects-rendering-d.md  181-direct-select-marquee-multinode-snap-axislock.md  182-drag-edit-history-coalescing.md  183-move-object-records-history.md  184-select-hover-open-hand-cursor.md  185-fill-picker-srgb-mismatch.md  186-drawer-left-padding.md  187-direct-select-anchor-context-menu-point-type.md  188-inspector-point-type-smooth-synthesizes-handles.md  189-merge-vertices-by-distance.md  19-render-true-variable-width-strokes-width.md  191-undo-delete-recording.md  192-global-shortcuts-tool-independent.md  20-pattern-fills-add-patternfill-to-model.md  20-pattern-fills-add-patternfill-to-the-mod.md  21-rendering-performance-dirty-region-incre.md  22-pixel-preview-and-overprint-preview-view.md  22-pixel-preview-and-overprint-preview.md  24-epic-appearance-stack-non-destructive-fi.md  25-non-destructive-live-boolean-compound-sh.md  26-epic-multiple-artboards.md  27-raster-image-support-imagenode-with-embe.md  28-live-property-constraints-parametric-bin.md  29-symbol-instances-propagate-master-edits.md  30-real-text-layout-engine-line-breaking-ju.md  (+38 more)
docs/reference/: tech-debt-registry.md
examples/: demo.lua
mcp-manifest/: photonic.json
release/: photonic-signing.pub
scripts/: release.sh
tools/: gen-mcp-docs.py
