[workspace]
members = [
    "crates/photonic-core",
    "crates/photonic-render",
    "crates/photonic-gui",
    "crates/photonic-mcp",
    "crates/photonic-app",
    "crates/photonic-embed",
]
resolver = "2"

[workspace.package]
license = "MIT"

[workspace.dependencies]
# Math / geometry
kurbo = { version = "0.11", features = ["serde"] }
peniko = { version = "0.3", features = ["serde"] }
lyon = "1.0"
geo = "0.28"
nalgebra = "0.33"
glam = { version = "0.29", features = ["serde"] }

# Rendering
wgpu = "22"
winit = "0.30"
egui = "0.29"
egui-wgpu = "0.29"
egui-winit = "0.29"
egui-phosphor = "0.7"
glyphon = "0.6"

# Async / server
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Image encoding (canvas screenshots) and raster pixel buffers
image = "0.25"
base64 = "0.22"

# Scripting
mlua = { version = "0.10", features = ["lua54", "vendored"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Error handling
anyhow = "1"
thiserror = "2"

# Utilities
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.3"
bitflags = "2"
smallvec = "1"
roxmltree = "0.20"
