[package]
name = "photonic-core"
version.workspace = true
edition = "2021"
license.workspace = true

[dependencies]
kurbo = { workspace = true }
peniko = { workspace = true }
geo = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
bitflags = { workspace = true }
smallvec = { workspace = true }
roxmltree = { workspace = true }
image = { workspace = true }
base64 = { workspace = true }
