[package]
name = "photonic-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
photonic-core = { path = "../photonic-core" }
kurbo = { workspace = true }
photonic-render = { path = "../photonic-render" }
egui = { workspace = true }
egui-phosphor = { workspace = true }
egui-wgpu = { workspace = true }
egui-winit = { workspace = true }
winit = { workspace = true }
wgpu = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
rfd = "0.15"
regex = "1"
pollster = { workspace = true }
screenshots = "0.8"
